...
                            <constraint firstItem="U35-iX-WYV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="sFJ-ak-psi"/>
                            <constraint firstAttribute="bottom" secondItem="jy2-wO-TSr" secondAttribute="bottom" id="yaT-Ft-kgm"/>
                            <constraint firstItem="EFv-m3-OZc" firstAttribute="top" secondItem="os3-rZ-q7u" secondAttribute="bottom" constant="8" id="zxS-tR-zXV"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Live" id="bZL-Os-Juf"/>
                    <connections>
                        <outlet property="backgroundImageView" destination="kw5-L9-vRa" id="RGS-zV-jUa"/>
                        <outlet property="blurBackground" destination="jy2-wO-TSr" id="wCs-hf-080"/>
                        <outlet property="container" destination="EFv-m3-OZc" id="2Td-3o-7Zn"/>
                        <outlet property="headerView" destination="os3-rZ-q7u" id="jiE-Zf-Bxt"/>
                    </connections>
...
                                            <constraint firstAttribute="height" constant="13.5" id="ley-qY-OaL"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="11"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MVP" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tYP-j8-guP">
                                        <rect key="frame" x="208.5" y="1" width="26" height="13.5"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="26" id="J2J-Ri-6fb"/>
                                            <constraint firstAttribute="height" constant="13.5" id="uCo-a3-9e1"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="11"/>
...
                        <color key="backgroundColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <connections>
                            <outlet property="dataSource" destination="fo3-8Q-AiQ" id="myJ-VC-oqP"/>
                            <outlet property="delegate" destination="fo3-8Q-AiQ" id="HAo-VW-BI9"/>
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="History" id="3xN-bg-hjF"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="bSW-gc-joe" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-663" y="-378"/>
        </scene>
        <!--Tab Bar Controller-->
...
